fix: Total funcionality without being deployed. Style: Minor fixes to Document. Title displays correctly if wraps.

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -80,6 +80,7 @@ http://ionicframework.com/docs/theming/ */
 
 
   /** Custom Colors  **/
+  --novus-article-background: #9fb797;
   --ion-color-orange: #DC9930;
 	--ion-color-orange-rgb: 220,153,48;
 	--ion-color-orange-contrast: #000000;
